--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link href=".resources/css/style.css" type="text/css" rel="stylesheet"
   </head>
   <body>
-<!-- First Commit-->
-    t
+    <h1>Discover hidden places in the world around you</h1>
+    <p><a href="#">Download Excursion (Coming Soon!)</a></p>
+
   </body>
 </html>
