Updated Content of site.

--- a/index.html
+++ b/index.html
@@ -3,11 +3,22 @@
   <head>
     <meta charset="utf-8">
     <title>Excursions App</title>
-    <link href=".resources/css/style.css" type="text/css" rel="stylesheet"
+    <link href="resources/css/style.css" type="text/css" rel="stylesheet"
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
     <p><a href="#">Download Excursion (Coming Soon!)</a></p>
-
+    <p>
+      <video autoplay muted loop>
+      <source src="resources/excursion.mp4" type="video/mp4">
+        Your Browser does not support this video.
+      </video>
+    </p>
+    <p>Your Personal Travel Guide</p>
+    <p>Excursion remembers places you like, and recommends new places of interest around you.</p>
+    <p><img src="resources/camp.jpg" alt="Camping Under The Stars"></p>
+    </p><img src="resources/phone.png" alt="Phone"></p>
+    <p>Coming Soon for iPhone and Android</p>
+    <p><a href="#">Download Excursion (Coming Soon!)</a></p>
   </body>
 </html>
