--- a/index.html
+++ b/index.html
@@ -7,18 +7,30 @@
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
-    <p><a href="#">Download Excursion (Coming Soon!)</a></p>
+
+    <p><a class="istore" href="#">Download Excursion (Coming Soon!)</a></p>
+
     <p>
       <video autoplay muted loop>
       <source src="resources/excursion.mp4" type="video/mp4">
         Your Browser does not support this video.
       </video>
     </p>
-    <p>Your Personal Travel Guide</p>
+
+    <h2>Your Personal Travel Guide</h2>
+
     <p>Excursion remembers places you like, and recommends new places of interest around you.</p>
+
     <p><img src="resources/camp.jpg" alt="Camping Under The Stars"></p>
+
     </p><img src="resources/phone.png" alt="Phone"></p>
-    <p>Coming Soon for iPhone and Android</p>
-    <p><a href="#">Download Excursion (Coming Soon!)</a></p>
+
+    <h2>Coming Soon for iPhone and Android</h2>
+
+    <p><a class="istore" href="#">Download Excursion (Coming Soon!)</a></p>
+
+    <div class="footer">
+      <p>© Excursion</p>
+    </div>
   </body>
 </html>
